welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:48: error: value unary_! is not a member of Unit
	while (!positionFinale())
               ^