welcome.lessons.welcome.traversal.Snake.scala.code
override def run() 
{
	def positionFinale()
	{
		if(getDirection() == Direction.EST)
		{
			gauche()
			if(estFaceMur())
			{
				droite()
				return true
			}
			else return false
		}
		else if(getDirection() == Direction.OUEST)
		{
			droite()
			if(estFaceMur())
			{
				gauche()
				return true
			}
			else return false
		}
	}

	def serpent()
	{
		if(!estFaceMur())
			avance()
		else
		{
			if(getDirection() == Direction.EST)
			{
				gauche(); avance(); gauche()
			}
			else if(getDirection() == Direction.OUEST)
			{
				droite(); avance(); droite()
			}
		}
	}


	baisseBrosse()
	
	while (!positionFinale())
	{
		serpent()
	}
	
	
}
